refactor: change app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "inter-clone",
+    "name": "Banco Inter",
     "slug": "inter-clone",
     "version": "1.0.0",
     "orientation": "portrait",
